fix menu pointer-events/z-index

--- a/website/styles/Menu.module.css
+++ b/website/styles/Menu.module.css
@@ -4,6 +4,8 @@
   left: 0;
   width: 100%;
   height: 100%;
+  pointer-events: none;
+  z-index: 300;
 }
 
 .droppable {
@@ -16,6 +18,7 @@
   z-index: -1;
 }
 .draggable {
+  pointer-events: auto;
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
   border-radius: 10px;
   position: absolute;
